--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,8 @@ services:
   - type: web
     name: qld-xml-url-extractor
     env: python
+    buildCommand: |
+      pip install -r requirements.txt
+      playwright install chromium
+    startCommand: python app.py
     plan: free
-    buildCommand: ""
-    startCommand: gunicorn app:app
